--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@tanstack/react-query": "^5.59.16",
     "cytoscape": "^3.33.1",
     "date-fns": "^4.1.0",
+    "highlight.js": "^11.11.1",
+    "marked": "^15.0.12",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
